# groundeffect

./: .gitignore  Cargo.toml  README.md  SPEC.md  groundeffect-mcp.sh
.claude/commands/: crm-update.md
.claude/skills/: groundeffect.md
GroundEffect/: Package.swift
GroundEffect/Sources/: GroundEffectApp.swift  MenuView.swift  MenuViewModel.swift  SettingsView.swift
crates/groundeffect-cli/: Cargo.toml
crates/groundeffect-cli/src/: main.rs
crates/groundeffect-core/: Cargo.toml
crates/groundeffect-core/src/: config.rs  error.rs  keychain.rs  lib.rs  oauth.rs
crates/groundeffect-core/src/db/: mod.rs  schema.rs
crates/groundeffect-core/src/embedding/: mod.rs
crates/groundeffect-core/src/mcp/: mod.rs  protocol.rs  resources.rs  tools.rs
crates/groundeffect-core/src/models/: account.rs  attachment.rs  calendar.rs  email.rs  mod.rs
crates/groundeffect-core/src/search/: mod.rs
crates/groundeffect-core/src/sync/: caldav.rs  imap.rs  mod.rs  rate_limiter.rs
crates/groundeffect-core/src/token_provider/: dawn.rs  file.rs  mod.rs  postgres.rs
crates/groundeffect-daemon/: Cargo.toml
crates/groundeffect-daemon/src/: main.rs
crates/groundeffect-mcp/: Cargo.toml
crates/groundeffect-mcp/src/: main.rs
homebrew-tap/: README.md
homebrew-tap/Formula/: groundeffect.rb
resources/: com.groundeffect.daemon.plist
scripts/: release.sh
skill/: SKILL.md
skill/examples/: common-workflows.md
skill/references/: account-commands.md  calendar-commands.md  config-commands.md  daemon-commands.md  email-commands.md  sync-commands.md
