[workspace]
resolver = "2"
members = [
    "crates/groundeffect-core",
    "crates/groundeffect-daemon",
    "crates/groundeffect-mcp",
    "crates/groundeffect-cli",
]

[workspace.package]
version = "0.5.1"
edition = "2021"
authors = ["Jamie Quint"]
license = "MIT"
repository = "https://github.com/jamiequint/groundeffect"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.41", features = ["full"] }

# Database
lancedb = "0.23"
lance-arrow = "1.0"
lance-index = "1.0"
arrow = { version = "56", features = ["prettyprint"] }
arrow-array = "56"
arrow-schema = "56"

# Embedding models
candle-core = "0.9"
candle-nn = "0.9"
candle-transformers = "0.9"
hf-hub = "0.4"
tokenizers = "0.22"

# IMAP
async-imap = "0.10"
async-native-tls = "0.5"

# CalDAV / HTTP
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
icalendar = "0.16"

# MCP / JSON-RPC
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Rate limiting
governor = "0.8"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
uuid = { version = "1.11", features = ["v4", "serde"] }
dirs = "5.0"
tokio-util = { version = "0.7", features = ["compat"] }
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "chrono"] }
tracing-appender = "0.2"
futures = "0.3"
async-trait = "0.1"
parking_lot = "0.12"
directories = "5.0"
toml = "0.8"
mail-parser = "0.10"
mail-builder = "0.3"
base64 = "0.22"
url = "2.5"
open = "5.3"
urlencoding = "2.1"
html2text = "0.14"
regex = "1.11"

# Shared library
groundeffect-core = { path = "crates/groundeffect-core" }

