[package]
name = "groundeffect-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "groundeffect"
path = "src/main.rs"

[dependencies]
groundeffect-core = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
dirs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dialoguer = "0.11"
open = "5.0"
uuid = { workspace = true }
urlencoding = { workspace = true }
base64 = { workspace = true }
reqwest = { workspace = true }
regex = { workspace = true }
