[package]
name = "groundeffect-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Async runtime
tokio = { workspace = true }

# Database
lancedb = { workspace = true }
lance-arrow = { workspace = true }
lance-index = { workspace = true }
arrow = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }

# Embedding models
candle-core = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }
hf-hub = { workspace = true }
tokenizers = { workspace = true }

# IMAP
async-imap = { workspace = true }
async-native-tls = { workspace = true }

# CalDAV / HTTP
reqwest = { workspace = true }
icalendar = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Rate limiting
governor = { workspace = true }

# Utilities
chrono = { workspace = true }
chrono-tz = { workspace = true }
uuid = { workspace = true }
dirs = { workspace = true }
tokio-util = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
parking_lot = { workspace = true }
directories = { workspace = true }
toml = { workspace = true }
mail-parser = { workspace = true }
mail-builder = { workspace = true }
base64 = { workspace = true }
url = { workspace = true }
open = { workspace = true }
urlencoding = { workspace = true }
html2text = { workspace = true }
regex = { workspace = true }

[features]
default = []
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
