[package]
name = "groundeffect-daemon"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "groundeffect-daemon"
path = "src/main.rs"

[dependencies]
groundeffect-core = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
chrono = { workspace = true }
uuid = { workspace = true }
dirs = { workspace = true }
directories = { workspace = true }
open = "5.0"
dialoguer = "0.11"
toml = { workspace = true }
